--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     }
   },
   "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
+    "printWidth": 140,
+    "semi": false,
+    "singleQuote": false,
     "trailingComma": "es5"
   },
   "name": "@oss-docs/sync",
@@ -59,10 +59,11 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "cachedir": "^2.3.0",
     "cross-spawn": "^7.0.1",
     "gunzip-maybe": "^1.4.1",
+    "mvdir": "^1.0.21",
     "tar-fs": "^2.1.0",
-    "yargs": "^16.2.0",
-    "mvdir": "^1.0.21"
+    "yargs": "^16.2.0"
   }
 }
