--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "peerDependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "tsdx test"
     }
   },
   "prettier": {
