--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.3.1",
+  "version": "0.4.0",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -55,10 +55,11 @@
     "husky": "^4.3.6",
     "size-limit": "^4.9.1",
     "tsdx": "^0.14.1",
-    "tslib": "^2.0.3",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "cachedir": "^2.3.0",
     "cross-spawn": "^7.0.1",
     "gunzip-maybe": "^1.4.1",
