Add repository path

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "license": "MIT",
+  "repository": "OSS-Docs-Tools/sync",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
